--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,11 @@
 }
 
 :root {
-    --background: #F5E0D1;
-    --background-two: #F4985E;
-    --light-green: #9EC5A4;
-    --medium-green: #608E69;
-    --strong-green: #0E3B18;
+    --background: #26262A;
+    --background-two: #000000;
+    --white: #ffffff;
+    --button: #3E3D40;
+    --background-input: #1D1D1D;
 }
 
 body {
@@ -25,10 +25,16 @@ body {
 }
 
 h1 {
-    color: var(--strong-green);
-    text-align: center;
-    font-family: 'Anton', sans-serif;
+    color: var(--white);
+    font-family: 'Poppins', sans-serif;
     top: 0;
+}
+
+h3 {
+    color: var(--white);
+    font-family: 'Poppins', sans-serif;
+    margin-top: 5px;  
+    font-weight: 100;
 }
 
 img {
@@ -38,6 +44,9 @@ img {
 input {
     display: block;
     border-radius: 5px;
+    border: 2px solid var(--button);
+    background-color: var(--background-input);
+    color: var(--white);
     margin: 10px auto;
     width: 100%;
     padding: 10px;
@@ -46,10 +55,12 @@ input {
 
 button {
     padding: 10px;
-    color: var(--strong-green);
-    border: 1px solid var(--strong-green);
+    color: var(--white);
+    background-color: var(--button);
+    border: 1px solid var(--white);
     border-radius: 5px;
+    width: 100%;
     margin-top: 1em;
     cursor: pointer;
-    font-weight: bold;
+    font-weight: 400;
 }
