--- a/styles/style.css
+++ b/styles/style.css
@@ -7,19 +7,21 @@
 :root {
     --background: #26262A;
     --background-two: #000000;
-    --white: #ffffff;
+    --white: #ebebeb;
     --button: #3E3D40;
     --background-input: #1D1D1D;
+    --subtitle: #cccccc;
 }
 
 body {
-    background-color: var(--background-two);
+    background: linear-gradient(90deg, #000000, #3E3D40);
 }
 
 .container {
     max-width: 400px;
     background-color: var(--background);
     border-radius: 5px;
+    border: 2px solid var(--button);
     margin: 10px auto;
     padding: 20px;
 }
@@ -31,7 +33,7 @@ h1 {
 }
 
 h3 {
-    color: var(--white);
+    color: var(--subtitle);
     font-family: 'Poppins', sans-serif;
     margin-top: 5px;  
     font-weight: 100;
